--- a/GitHubExtension.Test/GitHubExtension.Test.csproj
+++ b/GitHubExtension.Test/GitHubExtension.Test.csproj
@@ -137,8 +137,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\GitHubIssues\AssemblyInfoCommon.cs">
-      <Link>AssemblyInfoCommon.cs</Link>
+    <Compile Include="..\GitHubIssues\Properties\AssemblyInfoCommon.cs">
+      <Link>Properties\AssemblyInfoCommon.cs</Link>
     </Compile>
     <Compile Include="AssemblySetup.cs" />
     <Compile Include="Converters\EnumToStringConverterTest.cs" />
