--- a/GitHubExtension/packages.config
+++ b/GitHubExtension/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.0.25907-RC2" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" userInstalled="true" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" userInstalled="true" />
   <package id="Octokit" version="0.16.0" targetFramework="net45" userInstalled="true" />
