--- a/GitHubExtension.Test/packages.config
+++ b/GitHubExtension.Test/packages.config
@@ -3,8 +3,8 @@
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" userInstalled="true" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" userInstalled="true" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" userInstalled="true" />
-  <package id="NUnit" version="3.0.0-rc-3" targetFramework="net45" userInstalled="true" />
-  <package id="Octokit" version="0.16.0" targetFramework="net45" userInstalled="true" />
+  <package id="NUnit" version="3.9.0" targetFramework="net45" userInstalled="true" />
+  <package id="Octokit" version="0.29.0" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.GraphModel" version="12.0.4" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" userInstalled="true" />
