--- a/GitHubExtension/packages.config
+++ b/GitHubExtension/packages.config
@@ -10,12 +10,10 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" userInstalled="true" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net45" userInstalled="true" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" userInstalled="true" />
-  <package id="Tvl.VisualStudio.OutputWindow" version="2.0.1" targetFramework="net45" userInstalled="true" />
-  <package id="Tvl.VisualStudio.OutputWindow.Interfaces" version="2.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="VSSDK.ComponentModelHost" version="11.0.4" targetFramework="net45" userInstalled="true" />
-  <package id="VSSDK.ComponentModelHost.11" version="11.0.4" targetFramework="net45" userInstalled="true" />
-  <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" userInstalled="true" />
-  <package id="VSSDK.CoreUtility.11" version="11.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="Tvl.VisualStudio.OutputWindow" version="3.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Tvl.VisualStudio.OutputWindow.Interfaces" version="2.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.ComponentModelHost" version="12.0.4" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility" version="12.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.GraphModel" version="12.0.4" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" userInstalled="true" />
