--- a/GitHubExtension.Test/packages.config
+++ b/GitHubExtension.Test/packages.config
@@ -4,6 +4,8 @@
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" userInstalled="true" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" userInstalled="true" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" userInstalled="true" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net45" />
   <package id="Octokit" version="0.29.0" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" userInstalled="true" />
   <package id="VSSDK.GraphModel" version="12.0.4" targetFramework="net45" userInstalled="true" />
